arc-script/arc-script-test/compile/src/snapshots/rust@if.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/if.arc

---
use arc_script::arcorn;
use arc_script::arcorn::state::{ArcMapOps, ArcRefOps, ArcSetOps, ArcVecOps};
use arcon::prelude::*;
pub fn test() -> i32 {
    let y_1_0 = true;
    let y_1_1 = false;
    let y_1_2 = 3i32;
    let y_1_3 = if y_1_0 {
        let y_2_0 = if y_1_1 { y_1_2 } else { y_1_2 };
        y_2_0
    } else {
        let y_2_0 = if y_1_1 { y_1_2 } else { y_1_2 };
        y_2_0
    };
    y_1_3
}


