arc-script/arc-script-test/compile/src/snapshots/rust@ifs.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-pass/ifs.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
pub fn main() -> () {
    ()
}
pub fn test() -> i32 {
    let a_i32_0: i32 = 65i32;
    let b_i32_0: i32 = 66i32;
    let true_bool_0: bool = true;
    if true_bool_0 {
        a_i32_0
    } else {
        b_i32_0
    }
}


