arc-script/arc-script-test/compile/src/snapshots/rust@literals.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/literals.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
pub mod defs {
    use super::*;
    pub use arc_script::arcorn;
    pub use arc_script::arcorn::state::{ArcMapOps, ArcRefOps, ArcSetOps, ArcVecOps};
    pub use arcon::prelude::*;
    pub fn test() -> i32 {
        let y_1_0 = 127i8;
        let y_1_1 = -128i8;
        let y_1_2 = 32767i16;
        let y_1_3 = -32768i16;
        let y_1_4 = 2147483647i32;
        let y_1_5 = -2147483648i32;
        let y_1_6 = 9223372036854775807i64;
        let y_1_7 = -9223372036854775808i64;
        let y_1_8 = 255u8;
        let y_1_9 = 65535u16;
        let y_1_10 = 4294967295u32;
        let y_1_11 = 18446744073709551615u64;
        let y_1_12 = arcorn::bf16::from_f32(338953140000000000000000000000000000000f32);
        let y_1_13 = arcorn::bf16::from_f32(-117636680000000000000000000000000000000f32);
        let y_1_14 = arcorn::f16::from_f32(65504f32);
        let y_1_15 = arcorn::f16::from_f32(-65504f32);
        let y_1_16 = 340282350000000000000000000000000000000f32;
        let y_1_17 = -340282350000000000000000000000000000000f32;
        let y_1_18 = 179769313486231570000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f64 ;
        let y_1_19 = - 179769313486231570000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f64 ;
        let y_1_20 = true;
        let y_1_21 = false;
        let y_1_22 = 4711i32;
        y_1_22
    }
}
pub use defs::*;


