arc-script/arc-script-test/compile/src/snapshots/rust@nested_if.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/nested_if.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::arcorn;
    use arc_script::arcorn::*;
    pub fn test() -> i32 {
        let x_0: i32 = 65i32;
        let x_1: i32 = 66i32;
        let x_2: i32 = 67i32;
        let x_3: bool = true;
        let x_4: bool = false;
        let x_6: i32 = if val!(x_3) {
            val!(x_0)
        } else {
            let x_5: i32 = if val!(x_4) { val!(x_1) } else { val!(x_2) };
            val!(x_5)
        };
        val!(x_6)
    }
}
pub use arc_script_output::*;


