arc-script/arc-script-test/compile/src/snapshots/rust@ownership.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_fail/ownership.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::arcorn;
    use arc_script::arcorn::*;
    pub fn main(
        s0_0: arcorn::Stream<<i32 as arc_script::arcorn::Convert>::T>,
    ) -> (
        arcorn::Stream<<i32 as arc_script::arcorn::Convert>::T>,
        arcorn::Stream<<i32 as arc_script::arcorn::Convert>::T>,
    ) {
        let x_0: (
            arcorn::Stream<<i32 as arc_script::arcorn::Convert>::T>,
            arcorn::Stream<<i32 as arc_script::arcorn::Convert>::T>,
        ) = ((s0_0.clone()), (s0_0.clone()));
        (x_0.clone())
    }
}
pub use arc_script_output::*;


