arc-script/arc-script-test/compile/src/snapshots/rust@task-map.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-mlir-fail-todo/task-map.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
pub struct HandlerMap<
    'i,
    'source,
    'timer,
    'channel,
    O: 'static + Operator,
    B: Backend,
    C: ComponentDefinition,
> {
    pub op: &'i mut O,
    pub ctx: &'i mut OperatorContext<'source, 'timer, 'channel, O, B, C>,
    pub timestamp: Option<u64>,
}
#[derive(ArconState)]
pub struct TaskMap {
    #[ephemeral]
    pub f_0: fn(i32) -> i32,
}
fn Map(f_0: fn(i32) -> i32) -> OperatorBuilder<TaskMap> {
    OperatorBuilder {
        constructor: Arc::new(move |b| TaskMap { f_0 }),
        conf: Default::default(),
    }
}
impl Operator for TaskMap {
    type IN = Struct5valuei32End;
    type OUT = Struct5valuei32End;
    type TimerState = ArconNever;
    type OperatorState = Self;
    fn handle_element(
        &mut self,
        elem: ArconElement<Self::IN>,
        ref mut ctx: OperatorContext<Self, impl Backend, impl ComponentDefinition>,
    ) -> OperatorResult<()> {
        let ArconElement { timestamp, data } = elem;
        let event = data.value;
        let mut handler = HandlerMap {
            op: self,
            ctx,
            timestamp,
        };
        handler.handle(event);
        Ok(())
    }
    arcon::ignore_timeout!();
    arcon::ignore_persist!();
}
impl<'i, 'source, 'timer, 'channel, B: Backend, C: ComponentDefinition>
    HandlerMap<'i, 'source, 'timer, 'channel, TaskMap, B, C>
{
    fn handle(&mut self, event_0: i32) -> OperatorResult<()> {
        let y_1_0 = (self.op.f_0);
        let y_1_1 = y_1_0(event_0);
        let y_1_2 = self.emit(y_1_1);
        y_1_2;
        Ok(())
    }
    fn emit(&mut self, event_0: i32) {
        let data = Struct5valuei32End { value: event_0 };
        let elem = ArconElement {
            data,
            timestamp: self.timestamp,
        };
        self.ctx.output(elem);
    }
}
pub fn x_0(x_1: i32) -> i32 {
    let y_1_0 = 1i32;
    let y_1_1 = x_1 + y_1_0;
    y_1_1
}
pub fn main(input_0: Stream<Struct5valuei32End>) -> Stream<Struct5valuei32End> {
    let y_1_0 = Map(x_0);
    let y_1_1 = Stream::operator(input_0, y_1_0);
    y_1_1
}
#[arcorn::rewrite]
#[derive(Copy)]
pub struct Struct5valuei32End {
    value: i32,
}


